# uav_stereo_obstacle_avoidance

./: .gitignore  README.md
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/: CMakeLists.txt
rotors_obstacle_avoidance/: CMakeLists.txt  package.xml  running_instruction.txt
rotors_obstacle_avoidance/src/: camera.c  camera.h  get_image.c  get_image.cpp  get_image.cpp.example  get_image.hpp  offb_circle.cpp  offb_mode_test.cpp  offb_node.cpp  offb_node.cpp.bak  offb_node.cpp.bak2  offb_node_onboard.cpp  offb_onflight.cpp  umap_util.cpp  umap_util.hpp  uv-stereo-raw.cpp  uv-stereo.cpp  wp_planning.cpp  wp_planning.hpp
rotors_obstacle_avoidance/src/nodes/: offb_node.cpp
